--- a/index.htm
+++ b/index.htm
@@ -48,12 +48,12 @@
       ["PCGamingWiki", "https://pcgamingwiki.com/", ""],
       ["Roll20", "https://roll20.net/", ""],
       ["", "", ""],
-      ["Mega.nz", "https://mega.nz/", ""],
       ["Imgur", "https://imgur.com/", ""],
       ["YouTube", "https://www.youtube.com/", ""],
       ["Netflix", "http://netflix.com", ""],
       ["Twitch", "http://go.twitch.tv/", ""],
       ["", "", ""],
+      ["Mega.nz", "https://mega.nz/", ""],
       ["Dropbox", "https://www.dropbox.com", ""],
       ["Google Drive", "https://drive.google.com/", ""],
       ["SteamID.IO", "https://steamid.io/lookup/", ""],
@@ -125,7 +125,6 @@
         }
       }
     }
-
     function getFavicon(url) {
       var l = document.createElement("a");
       l.href = url;
@@ -137,14 +136,12 @@
   <title>Home</title>
   <style type="text/css">
     html, body {
-      margin: 0px;
-      padding: 0px;
       overflow: hidden;
       width: 100%;
       height: 100%;
       font-family: "Droid Sans", "Liberation Sans", "DejaVu Sans", "Segoe UI", Sans;
       font-size: 10pt;
-      background: rgb(23, 24, 26);
+      z-index: -100;
     }
     ul, li {
       list-style-type: none;
@@ -331,11 +328,19 @@
       width: 16px;
       height: 16px;
     }
+	#yt-player {
+      position: absolute;
+      margin: 0px;
+      padding: 0px;
+      width: 100%;
+      height: 100%;
+	}
   </style>
 </head>
 
 <body class="htmlNoPages" onload="javascript:init();">
   <div class="center gwd-div-1nyq gwd-new-class-caue">
+  <iframe id="yt-player" src="https://www.youtube.com/embed/iw8rcbyKb7o?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=1&amp;disablekb=1&amp;fs=0&amp;loop=1&amp;modestbranding=1"  frameborder="0" allowfullscreen></iframe>
     <div class="content" id="form">
       <div id="menu">
         <ul id="mnu"></ul>
