--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,6 @@
      <li>end search normally to use <b>'Google (Default)'</b></li> \
      <li>end search in <b>'!i'</b> to use <b>'Google Images'</b></li> \
      <li>end search in <b>'!y'</b> to use <b>'YouTube'</b></li> \
-     <li>end search in <b>'!p'</b> to use <b>'PornMD'</b></li> \
      <li>end search in <b>'!g'</b> to use <b>'PCGamingWiki'</b></li> \
      <li>end search in <b>'!w'</b> to use <b>'Wikipedia'</b></li> \
      <li>end search in <b>'!u'</b> to use <b>'Urban Dictionary'</b></li> \
@@ -21,7 +20,6 @@
       ["", "https://www.google.com/search?q="],
       ["!i", "https://www.google.com/search?tbm=isch&q="],
       ["!y", "https://www.youtube.com/results?search_query="],
-      ["!p", "https://www.pornmd.com/straight/"],
       ["!g", "https://pcgamingwiki.com/w/index.php?search="],
       ["!w", "http://en.wikipedia.org/w/index.php?search="],
       ["!u", "http://www.urbandictionary.com/define.php?term="],
@@ -61,9 +59,7 @@
       ["Ninite", "https://ninite.com", ""],
       ["", "", ""],
       ["Steam Underground Community", "http://cs.rin.ru/forum/index.php", ""],
-      ["Revold FTP", "ftp://revolt:1234@revolt.group/", ""],
-      ["Pirate Powered", "https://piratepowered.ga/", ""],
-      ["Good Old Downloads", "https://goodolddownloads.com/", ""],
+	  ["Fit-Girl Repacks", "https://fitgirl-repacks.site/", ""],
       ["", "", ""],
     ];
     var ss = "";
@@ -328,19 +324,11 @@
       width: 16px;
       height: 16px;
     }
-	#yt-player {
-      position: absolute;
-      margin: 0px;
-      padding: 0px;
-      width: 100%;
-      height: 100%;
-	}
   </style>
 </head>
 
 <body class="htmlNoPages" onload="javascript:init();">
   <div class="center gwd-div-1nyq gwd-new-class-caue">
-  <iframe id="yt-player" src="https://www.youtube.com/embed/iw8rcbyKb7o?rel=0&amp;controls=1&amp;showinfo=0&amp;autoplay=0&amp;disablekb=0&amp;fs=0&amp;loop=1&amp;modestbranding=1"  frameborder="0" allowfullscreen></iframe>
     <div class="content" id="form">
       <div id="menu">
         <ul id="mnu"></ul>
