fixed missing comma

--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,7 @@
       ["Mouse Sensitivity Calculator", "http://www.mouse-sensitivity.com/", ""],
       ["GitHub", "https://github.com/", ""],
       ["GitLab", "https://gitlab.com/", ""],
-      ["Pi-Hole Admin Panel", "http://pi.hole/admin/", "",]
+      ["Pi-Hole Admin Panel", "http://pi.hole/admin/", "",],
       ["", "", ""],
       ["Steam Underground Community", "http://cs.rin.ru/forum/index.php", ""],
       ["Fit-Girl Repacks", "https://fitgirl-repacks.site/", ""],
