Shorten Search Modifier Descriptions

--- a/index.htm
+++ b/index.htm
@@ -8,17 +8,17 @@
       return document.getElementById(id);
     };
     var help = "<ul> \
-     <li>end search normally to use <b>'Google (Default)'</b></li> \
-     <li>end search in <b>'!i'</b> to use <b>'Google Images'</b></li> \
-     <li>end search in <b>'!y'</b> to use <b>'YouTube'</b></li> \
-     <li>end search in <b>'!g'</b> to use <b>'PCGamingWiki'</b></li> \
-     <li>end search in <b>'!p'</b> to use <b>'ProtonDB'</b></li> \
-     <li>end search in <b>'!s'</b> to use <b>'SteamDB'</b></li> \
-     <li>end search in <b>'!w'</b> to use <b>'Wikipedia'</b></li> \
-     <li>end search in <b>'!u'</b> to use <b>'Urban Dictionary'</b></li> \
-     <li>end search in <b>'!m'</b> to use <b>'IMDb'</b></li> \
-     <li>end search in <b>'!mp'</b> to search <b>'CurseForge'</b> for minecraft modpacks</li> \
-     <li>end search in <b>'!rp'</b> to search <b>'CurseForge'</b> for minecraft resource packs</li> \
+     <li>end normally for <b>'Google (Default)'</b></li> \
+     <li>end with <b>'!i'</b> for <b>'Google Images'</b></li> \
+     <li>end with <b>'!y'</b> for <b>'YouTube'</b></li> \
+     <li>end with <b>'!g'</b> for <b>'PCGamingWiki'</b></li> \
+     <li>end with <b>'!p'</b> for <b>'ProtonDB'</b></li> \
+     <li>end with <b>'!s'</b> for <b>'SteamDB'</b></li> \
+     <li>end with <b>'!w'</b> for <b>'Wikipedia'</b></li> \
+     <li>end with <b>'!u'</b> for <b>'Urban Dictionary'</b></li> \
+     <li>end with <b>'!m'</b> for <b>'IMDb'</b></li> \
+     <li>end with <b>'!mp'</b> for <b>'CurseForge'</b> Minecraft modpacks</li> \
+     <li>end with <b>'!rp'</b> for <b>'CurseForge'</b> Minecraft resource packs</li> \
 </ul>";
     var search = [
       ["", "https://www.google.com/search?q="],
@@ -31,7 +31,7 @@
       ["!p", "https://www.protondb.com/search?q="],
       ["!s", "https://steamdb.info/search/?a=app&q="],
       ["!mp", "https://www.curseforge.com/minecraft/modpacks/search?search="],
-      ["!rp", "https://www.curseforge.com/minecraft/texture-packs/search?search="],
+      ["!rp", "https://www.curseforge.'com/minecraft/texture-packs/search?search="],
 
     ];
     var menus = [
