Shorten The Minecraft Search Descriptions even more

--- a/index.htm
+++ b/index.htm
@@ -17,8 +17,8 @@
      <li>end with <b>'!w'</b> for <b>'Wikipedia'</b></li> \
      <li>end with <b>'!u'</b> for <b>'Urban Dictionary'</b></li> \
      <li>end with <b>'!m'</b> for <b>'IMDb'</b></li> \
-     <li>end with <b>'!mp'</b> for <b>'CurseForge'</b> Minecraft modpacks</li> \
-     <li>end with <b>'!rp'</b> for <b>'CurseForge'</b> Minecraft resource packs</li> \
+     <li>end with <b>'!mp'</b> for <b>'Minecraft ModPacks'</b></li> \
+     <li>end with <b>'!rp'</b> for <b>'Minecraft ResourcePacks'</b></li> \
 </ul>";
     var search = [
       ["", "https://www.google.com/search?q="],
