fix google voice

--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,7 @@
       ["Gmail", "https://mail.google.com/", ""],
       ["Pastebin", "http://pastebin.com", ""],
       ["Google Translate", "https://translate.google.com/", ""],
-      ["Google Voice", "https://voice.google.com/", ""],
+      ["Google Voice", "https://voice.google.com/u/1/", ""],
       ["", "", ""],
       ["Humble Bundle", "https://www.humblebundle.com/", ""],
       ["Indie Gala", "https://www.indiegala.com/", ""],
