update moved sites and remove unneeded sites

--- a/index.htm
+++ b/index.htm
@@ -59,9 +59,6 @@
       ["", "", ""],
       ["Imgur", "https://imgur.com/", ""],
       ["YouTube", "https://www.youtube.com/", ""],
-      ["Netflix", "http://netflix.com", ""],
-      ["Sling TV", "https://www.sling.com/", ""],
-      ["Twitch", "http://go.twitch.tv/", ""],
       ["", "", ""],
       ["Mega.nz", "https://mega.nz/", ""],
       ["Dropbox", "https://www.dropbox.com", ""],
@@ -70,12 +67,10 @@
       ["Mouse Sensitivity Calculator", "http://www.mouse-sensitivity.com/", ""],
       ["GitHub", "https://github.com/", ""],
       ["GitLab", "https://gitlab.com/", ""],
-      ["Pi-Hole Admin Panel", "http://pi.hole/admin/", "",],
       ["", "", ""],
       ["Steam Underground Community", "http://cs.rin.ru/forum/index.php", ""],
       ["Fit-Girl Repacks", "https://fitgirl-repacks.site/", ""],
-      ["GOG Games", "https://gog-games.com/", ""],
-      ["Steam Workshop Downloader", "https://steamworkshopdownloader.io/", ""],
+      ["GOG Games", "https://gog-games.to/", ""],
       ["", "", ""],
     ];
     var ss = "";
